Item counter and preparing mass delete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <button class="button center" onClick="newTodo()">New matter to do</button>
       <ul id="todo-list" class="todo-list"></ul>
-      <button class="button center todo-delete" onClick="deleteTodos()">Delete checked to do's</button>
+      <button class="button center todo-delete" onClick="deleteCheckedTodos()">Delete checked to do's</button>
     </div>
     <script src="./script.js"></script>
   </body>
